merge-upstream: fix language selector scrollbar styles

--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -68,7 +68,7 @@
     position: relative;
     overflow-y: auto;
     overflow-x: hidden;
-    scrollbar-color: $ui-black-transparent $looks-secondary;
+    scrollbar-color: $menu-bar-foreground $menu-bar-background;
     border-radius: 8px;
 }
 
@@ -87,11 +87,11 @@
 }
 
 .submenu > .menu::-webkit-scrollbar-track {
-    background: $looks-secondary;
+    background: $menu-bar-background;
 }
 
 .submenu > .menu::-webkit-scrollbar-thumb {
-    background-color: $ui-black-transparent;
+    background-color: $menu-bar-foreground;
     border-radius: 12px;
-    border: 3px solid $looks-secondary;
+    border: 3px solid $menu-bar-background;
 }
